# JUCP

./: .gitignore  .gitmodules  LICENSE  README.md  build.py  build.sh  manifest.template  manifest_perf.template  skipUCXBuild.sh  skip_ucx.sh  tags
.jniScripts/: generateJNIHeader.sh
.scripts/: pushToMaster.sh
examples/: buildExamples.sh  nbuild.sh  runClient.sh  runHelloClient.sh  runHelloServer.sh  runHelloWorld.sh  runServer.sh  ucp_pp.c
examples/org/ucx/jucx/examples/: ExampleContext.java  ExampleUtils.java  OptionsUtils.java  UCPBase.java  UCPClient.java  UCPServer.java
examples/org/ucx/jucx/examples/helloworld/: HelloClient.java  HelloServer.java  HelloWorld.java
src/c/: configure.ac
src/c/src/: Bridge.cc  Bridge.h  CallbackFunctionsClient.cc  CallbackFunctionsClient.h  CallbackFunctionsServer.cc  CallbackFunctionsServer.h  Client.cc  Client.h  Context.cc  Context.h  EventQueue.cc  EventQueue.h  Events.cc  Events.h  Makefile.am  Msg.cc  Msg.h  MsgPool.cc  MsgPool.h  MsgPools.cc  MsgPools.h  RequestHandler.cc  RequestHandler.h  ServerPortal.cc  ServerPortal.h  ServerSession.cc  ServerSession.h  UcpRequest.cc  UcpRequest.h  UcpUtils.h  Utils.cc  Utils.h  Worker.cc  Worker.h  bullseye.h
src/java/org/accelio/jxio/: ClientSession.java
src/java/org/accelio/jxio/impl/: Bridge.java
src/java/org/ucx/jucx/: Bridge.java  Context.java  EndPoint.java  LoadLibrary.java  TagMsg.java  UCPConstants.java  UCPContext.java  UCPEndPoint.java  UCPParams.java  UCPTagMsg.java  UCPWorker.java  UCPWorkerAddress.java  Worker.java  WorkerAddress.java
tests/: perftest.sh
(+19 files in other folders)
